--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <h1 class = 'page-header'>Pokedex</h1>
+        
+        <ul class = 'pokemon-list'></ul>
+
         <script src="script.js"></script>
     </body>
 </html>
