--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         
         <ul class = 'pokemon-list'></ul>
 
-        <script src="script.js"></script>
+        <script src="js/promise-polyfill.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
