--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     </head>
     <body>
         <h1 class = "page-header">Pokedex</h1>
-        
-        <!-- Button trigger modal -->
-	    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Launch demo modal
-        </button> -->
 
-        <ul class = 'list-group list-unstyled pokemon-list'></ul>
+        <!--Pokemon List-->
+        <!-- <ul class = 'list-group list-unstyled pokemon-list'></ul> -->
+        <div class="container-fluid">
+            <ul class = 'row pokemon-list'></ul>
+        </div>
 
         <!-- <div id='modal-container'></div> -->
         <!--Modal-->
