added a better header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 	    <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1 class = "page-header">Pokedex</h1>
+        <!-- <h1 class = "page-header">Pokedex</h1> -->
+        <header class="header">
+            <h1 class="page-header">Gen 1 Pokedex</h1>
+            <h3 class="header-quote">The 151 Pokemon that started it all!</h3>
+        </header>
 
         <!--Pokemon List-->
         <div class="container-fluid">
