--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
 	    crossorigin="anonymous">
 
-	    <link href="style.css" rel="stylesheet" type="text/css" />
+	    <link href="dist/style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <!-- <h1 class = "page-header">Pokedex</h1> -->
@@ -48,6 +48,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch.umd.js"></script>
-        <script src="js/script.js"></script>
+        <script src="dist/script.js"></script>
     </body>
 </html>
